--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # Always required
+ETHERSCAN_API_KEY=yourEtherscanApiKey
 RPC_URL=yourMainnetRpcUrl
 RUNNING_LOCALLY=1 # use 0 to run as a GitHub Action
 TENDERLY_ACCESS_TOKEN=yourTenderlyAccessToken
